--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-codemirror": "^4.0.6",
+    "vue-json-editor": "^1.4.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
